--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml
@@ -96,6 +96,18 @@
                         </div>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="perfil-lateral @ManageNavPages.GiveawaysNavClass(ViewContext)" id="giveaways" asp-page="./Giveaways">
+                        <div style="display: flex; align-items: center;">
+                            <i class="fa-solid fa-trophy"></i>
+
+                            <span style="margin-left: 15px;">
+                                @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String7")
+                            </span>
+                        </div>
+                    </a>
+                </li>
             </ul>
         </div>
 
