--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml
@@ -24,7 +24,7 @@
                 <li class="nav-item">
                     <a class="perfil-lateral @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">
                         <div style="display: flex; align-items: center;">
-                            <i class="fa-solid fa-envelope"></i>
+                            <i class="fa-solid fa-envelope" style="width: 20px;"></i>
 
                             <span style="margin-left: 15px;">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String1")
@@ -36,7 +36,7 @@
                 <li class="nav-item">
                     <a class="perfil-lateral @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">
                         <div style="display: flex; align-items: center;">
-                            <i class="fa-solid fa-lock"></i>
+                            <i class="fa-solid fa-lock" style="width: 20px;"></i>
 
                             <span style="margin-left: 15px;">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String2")
@@ -48,7 +48,7 @@
                 <li class="nav-item">
                     <a class="perfil-lateral @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">
                         <div style="display: flex; align-items: center;">
-                            <i class="fa-solid fa-user"></i>
+                            <i class="fa-solid fa-user" style="width: 20px;"></i>
 
                             <span style="margin-left: 15px;">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String3")
@@ -64,7 +64,7 @@
                 <li class="nav-item">
                     <a class="perfil-lateral @ManageNavPages.NotificationsNavClass(ViewContext)" id="notifications" asp-page="./Notifications">
                         <div style="display: flex; align-items: center;">
-                            <i class="fa-solid fa-bell"></i>
+                            <i class="fa-solid fa-bell" style="width: 20px;"></i>
 
                             <span style="margin-left: 15px;">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String4")
@@ -76,7 +76,7 @@
                 <li class="nav-item">
                     <a class="perfil-lateral @ManageNavPages.SteamAccountNavClass(ViewContext)" id="steamaccount" asp-page="./SteamAccount">
                         <div style="display: flex; align-items: center;">
-                            <i class="fa-brands fa-steam"></i>
+                            <i class="fa-brands fa-steam" style="width: 20px;"></i>
 
                             <span style="margin-left: 15px;">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String5")
@@ -88,7 +88,7 @@
                 <li class="nav-item">
                     <a class="perfil-lateral @ManageNavPages.KeysNavClass(ViewContext)" id="keys" asp-page="./Keys">
                         <div style="display: flex; align-items: center;">
-                            <i class="fa-solid fa-key"></i>
+                            <i class="fa-solid fa-key" style="width: 20px;"></i>
 
                             <span style="margin-left: 15px;">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String6")
@@ -100,7 +100,7 @@
                 <li class="nav-item">
                     <a class="perfil-lateral @ManageNavPages.GiveawaysNavClass(ViewContext)" id="giveaways" asp-page="./Giveaways">
                         <div style="display: flex; align-items: center;">
-                            <i class="fa-solid fa-trophy"></i>
+                            <i class="fa-solid fa-people-group" style="width: 20px;"></i>
 
                             <span style="margin-left: 15px;">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "SettingsLayout.String7")
